--- a/html/selected_runningtime(4h).html
+++ b/html/selected_runningtime(4h).html
@@ -22,7 +22,7 @@
     <div class="menubar" >
         <div class="container">
             
-        <a href="selected_runningtime(all).html"><div class="runningtime" id="30" onclick="handleClick30(event)">30m</div></a>
+        <a href="selected_runningtime(all).html"><div class="runningtime" id="30" onclick="handleClick30(event)" style="margin-left: 6%;">30m</div></a>
         <a href="selected_runningtime(1h).html"><div class="runningtime"  id="1" onclick="handleClick1(event)">1h</div></a>
         <a href="selected_runningtime(2h).html"><div class="runningtime" id="2" onclick="handleClick2(event)">2h</div></a>
         <a href="selected_runningtime(3h).html"><div class="runningtime" id="3" onclick="handleClick3(event)">3h</div></a>
