--- a/html/selected_runningtime(1h).html
+++ b/html/selected_runningtime(1h).html
@@ -22,8 +22,9 @@
     <div class="menubar" >
         <div class="container">
             
-        <a href="selected_runningtime(all).html"><div class="runningtime" id="30" onclick="handleClick30(event)">30m</div></a>
+        <a href="selected_runningtime(all).html"><div class="runningtime" id="30" onclick="handleClick30(event)" style="margin-left: 6%;">30m</div></a>
         <div class="runningtime"  style="
+        
         float: left;
         background: white;
         width: 17%;
