--- a/html/selected_runningtime(2h).html
+++ b/html/selected_runningtime(2h).html
@@ -27,7 +27,7 @@
     <div class="menubar" >
         <div class="container">
             
-        <a href="selected_runningtime(all).html"><div class="runningtime" id="30" onclick="handleClick30(event)">30m</div></a>
+        <a href="selected_runningtime(all).html"><div class="runningtime" id="30" onclick="handleClick30(event)" style="margin-left: 6%;">30m</div></a>
         <a href="selected_runningtime(1h).html"><div class="runningtime"  id="1" onclick="handleClick1(event)">1h</div></a>
         <div class="runnintime" style="
         float: left;
