--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="menubar" >
         <div id="container">
             
-        <a href="/html/selected_runningtime(all).html"><div class="runningtime" id="30" onclick="handleClick30(event)">30m</div></a>
+        <a href="/html/selected_runningtime(all).html"><div class="runningtime" id="30" onclick="handleClick30(event)" style="margin-left: 8.5%;">30m</div></a>
         <a href="/html/selected_runningtime(1h).html"><div class="runningtime" id="1" onclick="handleClick1(event)">1h</div></a>
         <a href="/html/selected_runningtime(2h).html"><div class="runningtime" id="2" onclick="handleClick2(event)">2h</div></a>
         <a href="/html/selected_runningtime(3h).html"><div class="runningtime" id="3" onclick="handleClick3(event)">3h</div></a>
@@ -37,12 +37,20 @@
         </div>
     </div>
     </div>
-    <h2 style="color: white; margin-left: 50px;">Movie Of The Week</h2>
+    <h2 style="color: white; margin-left: 20px;">Movie Of The Week</h2>
     <div id="movie">
         <div class="div-1" onclick="m1"></div>
         <div class="div-2" onclick="m2"></div>
         <div class="div-3" onclick="m3"></div>
         <div class="div-4" onclick="m4"></div>
+        <div class="div-5" onclick="m4"></div>
+        <div class="div-6" onclick="m4"></div>
+        <div class="div-7" onclick="m4"></div>
+        <div class="div-8" onclick="m4"></div>
+        <div class="div-9" onclick="m4"></div>
+        <div class="div-10" onclick="m4"></div>
+        <div class="div-11" onclick="m4"></div>
+        <div class="div-12" onclick="m4"></div>
     </div>
 
     
