--- a/html/selected_runningtime(1h).html
+++ b/html/selected_runningtime(1h).html
@@ -28,10 +28,12 @@
         float: left;
         background: white;
         width: 17%;
-        height: 41px;
+        height: 45px;
+        padding-top: 1%;
         margin: 1%;
         margin-top: 1.25%;
-        font-size: 25pt;
+        font-size: 20pt;
+        
         text-align: center;
         font-weight: bold;
         border: 5px solid red;
