--- a/html/selected_runningtime(all).html
+++ b/html/selected_runningtime(all).html
@@ -26,10 +26,11 @@
         float: left;
         background: white;
         width: 17%;
-        height: 41px;
+        height: 45px;
         margin: 1%;
         margin-top: 1.25%;
-        font-size: 25pt;
+        font-size: 20pt;
+        padding-top: 1%;
         text-align: center;
         font-weight: bold;
         border: 5px solid red;
