--- a/html/selected_runningtime(3h).html
+++ b/html/selected_runningtime(3h).html
@@ -29,10 +29,11 @@
         float: left;
         background: white;
         width: 17%;
-        height: 45px;
-        padding-top: 1%;
+        height: 25px;
+        padding-top: 0%;
+        padding-bottom: 2%;
         margin: 1%;
-        margin-top: 1.25%;
+        margin-top: 3.25%;
         font-size: 20pt;
         text-align: center;
         font-weight: bold;
