--- a/html/selected_runningtime(all).html
+++ b/html/selected_runningtime(all).html
@@ -26,11 +26,11 @@
         float: left;
         background: white;
         width: 17%;
-        height: 45px;
+        height: 25px;
+        padding-top: 0%;
+        padding-bottom: 2%;
         margin: 1%;
-        margin-top: 1.25%;
-        font-size: 20pt;
-        padding-top: 1%;
+        margin-top: 3.25%;
         text-align: center;
         font-weight: bold;
         border: 5px solid red;
