--- a/html/selected_runningtime(all).html
+++ b/html/selected_runningtime(all).html
@@ -27,10 +27,11 @@
         background: white;
         width: 17%;
         height: 25px;
-        padding-top: 0%;
-        padding-bottom: 2%;
+        padding-top: 1%;
+        padding-bottom: 0.5%;
         margin: 1%;
         margin-top: 3.25%;
+        font-size: 16pt;
         text-align: center;
         font-weight: bold;
         border: 5px solid red;
