--- a/html/selected_movie.html
+++ b/html/selected_movie.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="/css/style2.css">
+    <link rel="icon" href="/images/TIMESAVERLOGO.png">
     <title>selected_moviepage</title>
     <style>
         @font-face {
