--- a/html/selected_runningtime(1h).html
+++ b/html/selected_runningtime(1h).html
@@ -5,16 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style3.css">
+    <link rel="icon" href="/images/TIMESAVERLOGO.png">
     <title>Document</title>
-    <style>
-        @font-face {
-            font-family: 'TTTtangsbudaejjigaeB';
-            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/TTTtangsbudaejjigaeB.woff2') format('woff2');
-            font-weight: 700;
-            font-style: normal;
-        }
-        
-         </style>
 </head>
 <body>
     <h1><a href="/index.html">TIME SAVER</a></h1>
