5th last commit

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     </div>
     <h2 style="color: white; margin-left: 20px;">Movie Of The Week</h2>
-    <h3>Korean</h3><a href="time-saver-forphone-ko.netlify.app"><img src="/images/pngwing.com.png" alt="" id="button"></a>
+    <h3>Korean</h3><a href="time-saver-forphone-kor.netlify.app"><img src="/images/pngwing.com.png" alt="" id="button"></a>
     <div id="movie">
         <div class="div-1" onclick="m1"></div>
         <div class="div-2" onclick="m2"></div>
